# LamPyrid

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  firefly-iii-6.4.8-v1.yaml  pyproject.toml  pytest.ini  run.py
.github/workflows/: ci.yml  docker-publish.yml  release.yml
src/lampyrid/: __init__.py  __main__.py  config.py  server.py  utils.py
src/lampyrid/auth/: __init__.py  google.py
src/lampyrid/clients/: firefly.py
src/lampyrid/models/: __init__.py  firefly_models.py  lampyrid_models.py
src/lampyrid/scripts/: __init__.py  format.py  update_schema.py
src/lampyrid/services/: __init__.py  accounts.py  budgets.py  categories.py  insights.py  rules.py  tags.py  transactions.py
src/lampyrid/tools/: __init__.py  _annotations.py  accounts.py  budgets.py  categories.py  insights.py  rules.py  tags.py  transactions.py
tests/: __init__.py  conftest.py  setup_test_env.sh  verify_setup.py
tests/fixtures/: accounts.py  budgets.py  insights.py  transactions.py
tests/integration/: __init__.py  test_accounts.py  test_budgets.py  test_categories.py  test_insights.py  test_integration.py  test_rules.py  test_tags.py  test_transactions.py
tests/unit/: test_budgets_service.py  test_config.py  test_firefly_client.py  test_format.py  test_main.py  test_models.py  test_rules_service.py  test_scripts.py  test_server.py  test_tool_annotations.py  test_transactions_service.py  test_utils.py
tests_disabled/integration/: test_integration.py
tests_disabled/unit/: test_firefly_client.py  test_models.py
