[project]
dependencies = [
  "cryptography>=46.0.0",
  "fastmcp>=2.14",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
]
description = "Add your description here"
name = "lampyrid"
readme = "README.md"
requires-python = ">=3.14"
version = "0.2.0"

[project.scripts]
lampyrid = "lampyrid.__main__:main"

[dependency-groups]
dev = [
  "datamodel-code-generator>=0.52.0",
  "ruff>=0.14.11",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.datamodel-codegen]
input = "firefly-iii-6.4.14-v1.yaml"
output = "src/lampyrid/models/firefly_models.py"
output-model-type = "pydantic_v2.BaseModel"
